--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <figure class="logo">
         <img src="images/logo.png" height="100" alt="Logo"/>
         <img src="images/1f1f2-1f1fd.svg" width="20px" alt="logo">
+        <img src="images/2.png" width="20px" alt="logo">
         <img src="images/1f1e8-1f1f4.svg" width="20px" alt="logo">
       </figure>
       <nav class="menu">
@@ -44,10 +45,10 @@
   <section class="hero">
     <div class="container">
       <h1>
-        S! Soy <strong>Sebastian X e II</strong> <br />e <strong> Developer</strong> <br /> II
-         <strong> Rockstar </strong>
+        S! Soy <strong>Sebastian X e II</strong> <br />X <strong> Platzi Master Student</strong> <br /> II
+         <strong> Frontend Developer</strong>
       </h1>
-      --<img class="hero-image" src="images/hero.jpg" width="500" height="300" alt="imagen principal del sitio">
+      <img class="hero-image" src="images/hero.jpg" width="500" height="300" alt="imagen principal del sitio">
     </div>
   </section>
   <section id="portafolio" class="portfolio">
@@ -63,7 +64,7 @@
         </div>
         <figure class="project-imageContainer">
           <img class="project-image" width="500" src="images/1.JPG"
-            alt="">
+            alt="person">
         </figure>
       </article>
      
