--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <link rel="icon" type="imagen/png" href="images/1f1f2-1f1fd.svg" />
   <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro&display=swap" rel="stylesheet">
   <!--<link rel="stylesheet" href="css/medias.css" media="screen and (max-width:768px)" /> -->
+  <link rel="stylesheet" href="css/mobile.css">
   <link rel="stylesheet" href="css/estilos.css">
+  <link rel="stylesheet" href="css/normalize.css">
   <!--<style>
     @media screen and (max- width: 768px) {
     body{
